// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure adapter construct builds with attributes 1`] = `
Object {
  "alt": "An image",
  "captionText": "",
  "captionWidth": "text-width",
  "float": "left",
  "height": 100,
  "size": "custom",
  "textGroup": TextGroup {
    "dataTemplate": Object {},
    "items": Array [
      TextGroupItem {
        "data": Object {},
        "parent": [Circular],
        "text": StyleableText {
          "styleList": ChunkStyleList {
            "styles": Array [],
          },
          "value": "",
        },
      },
    ],
    "maxItems": 1,
  },
  "url": "http://website.com/image.jpg",
  "width": 100,
  "wrapText": false,
}
`;

exports[`Figure adapter construct builds without attributes 1`] = `
Object {
  "alt": null,
  "captionText": "",
  "captionWidth": "image-width",
  "float": "left",
  "height": null,
  "size": "small",
  "textGroup": TextGroup {
    "dataTemplate": Object {},
    "items": Array [
      TextGroupItem {
        "data": Object {},
        "parent": [Circular],
        "text": StyleableText {
          "styleList": ChunkStyleList {
            "styles": Array [],
          },
          "value": "",
        },
      },
    ],
    "maxItems": 1,
  },
  "url": null,
  "width": null,
  "wrapText": false,
}
`;
